--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@
 *.exe
 *.out
 *.app
+
+# NetBeans specific #
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
